make changes for home page and our work page

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/mobile-ui-ux-icon.svg" width="40px" height="40px" class="service-icon-img" />
                   <h4 class="text-left ">UI/UX</h4>
                 </div>
                 <p class="mt-2">Involves specialized professionals design and enhance user interfaces and experiences for digital products, utilizing tools such as user research, wireframing, visual design, and user testing.</p>
@@ -228,7 +228,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/wireframe-svgrepo-com.svg" width="40px" height="40px" class="service-icon-img" />
                   <h4 class="text-left ">Wireframing</h4>
                 </div>
                 <p class="mt-2">creating a visual representation of a website, app, or software interface that outlines its basic structure and functionality. It serves as a blueprint for the final design and helps identify potential usability issues early in the design process.</p>
@@ -241,7 +241,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/analysis-svgrepo-com.svg" width="40px" height="40px" class="service-icon-img" />
                   <h4 class="text-left ">Analysis</h4>
                 </div>
                 <p class="mt-2">Involves evaluating user behavior and feedback to identify patterns, trends, and insights that inform the design and optimization of digital products. It typically involves the use of analytics tools and techniques, such as heatmaps, A/B testing, and user surveys.</p>
@@ -254,7 +254,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Mobile-Dev.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/mobile-app-developing-svgrepo-com.svg" width="40px" height="40px" class="service-icon-img" />
                   <h4 class="text-left ">Mobile App Development</h4>
                 </div>
                 <p class="mt-2">Need a mobile app that offers exceptional user experiences and leverages the latest technologies? We create highly scalable, user-friendly mobile experiences that allow your customers to access your services anytime, anywhere. We work closely with you to create a customized mobile app that meets your business needs and goals.</p>
@@ -267,7 +267,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Enterprise Development.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/business-chart-diagram-svgrepo-com.svg" width="40px" height="40px" class="service-icon-img" />
                   <h4 class="text-left ">Enterprise Development</h4>
                 </div>
                 <p class="mt-2">Are you searching for a comprehensive enterprise solution that meets all your business
@@ -282,7 +282,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/IT Consulting Services.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/customer-reviews-svgrepo-com.svg" width="40px" class="service-icon-img" />
                   <h4 class="text-left">IT Consulting Services</h4>
                 </div>
                 <p class="mt-2">Need expert advice to enhance your technology infrastructure? Consider our IT consulting
@@ -297,7 +297,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/Software Development.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/web-development-svgrepo-com.svg" width="40px" class="service-icon-img" />
                   <h4 class="text-left">Software Development</h4>
                 </div>
                 <p class="mt-2">Are outdated IT systems hindering your business growth? Our team specializes in creating
@@ -312,7 +312,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/users.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/site-map-svgrepo-com.svg" width="40px" class="service-icon-img" />
                   <h4 class="text-left">Offshore Software Development</h4>
                 </div>
                 <p class="mt-2">Looking for cost-effective software development options? Consider outsourcing your
@@ -327,7 +327,7 @@
             <div class="p-3 services-cards d-flex rounded-3">
               <div class="services-left">
                 <div class="services-logo">
-                  <img src="assets/icons/services/users.png" width="40px" class="service-icon-img" />
+                  <img src="assets/icons/services/align-vertical-top-svgrepo-com.svg" width="40px" class="service-icon-img" />
                   <h4 class="text-left">Testing</h4>
                 </div>
                 <p class="mt-2">Assessing the usability and effectiveness of a digital product through various methods, such as user testing, usability testing, and quality assurance testing. The goal is to identify and resolve any usability issues before launching the product to the market.</p>
@@ -351,7 +351,7 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project1.png" alt="...">
+                <img src="assets/projects/eccocar.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
@@ -364,7 +364,7 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project12.png" alt="...">
+                <img src="assets/projects/sonetel.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
@@ -377,7 +377,7 @@
           <div class="portfolio-item-card">
             <div class="portfolio-image">
               <a href="#" class="portfolio-image-link">
-                <img src="assets/projects/project13.png" alt="...">
+                <img src="assets/projects/remedo.png" alt="...">
               </a>
             </div>
             <div class="portfolio-name">
