add details page deisgn for eccocar project

--- a/project/eccocar.html
+++ b/project/eccocar.html
@@ -231,40 +231,21 @@
     </div>
   </section>
 
-  <div id="eccocarcarouse" class="carousel eccocar-slider slide container mb-5 mt-3" data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#eccocarcarouse" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/projects/eccocar/Admin Home.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/eccocar/Analytics.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/eccocar/Automation.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/eccocar/Reservations.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/eccocar/Vehicles.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#eccocarcarouse" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#eccocarcarouse" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
+  <section id="slider">
+    <input type="radio" name="slider" id="s1" checked>
+    <input type="radio" name="slider" id="s2">
+    <input type="radio" name="slider" id="s3">
+    <input type="radio" name="slider" id="s4">
+    <input type="radio" name="slider" id="s5">
+
+    <label for="s1" id="slide1"><img src="../assets/projects/eccocar/admin/Admin Home Page.png" alt=""></label>
+    <label for="s2" id="slide2"><img src="../assets/projects/eccocar/admin/Analytics.png" alt=""></label>
+    <label for="s3" id="slide3"><img src="../assets//projects/eccocar/admin/Automation.png" alt=""></label>
+    <label for="s4" id="slide4"><img src="../assets//projects/eccocar/admin/Reservations.png" alt=""></label>
+    <label for="s5" id="slide5"><img src="../assets//projects/eccocar/admin/Vehicles.png" alt=""></label>
+  </section>
+
+  
 
   
   <section class="carousel-black-section" style="background-color: #000;"> 
@@ -351,6 +332,8 @@
       If you’re working on a transformative product and looking for the right technical partner to execute your vision, reach out to our team and we’ll see how we can help.</p>
   </div>
   </section>
+
+  
 
   <!-- footer section  ---->
   <div class="footer-1 pt-5">
