--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/eccocar.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -179,7 +179,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/Sonetel.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -219,7 +219,7 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/remedo.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -248,7 +248,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/bluebird.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -277,7 +277,7 @@
                     <p>Redux</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/bryllance.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -321,7 +321,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/compose.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -347,7 +347,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/noobstrom.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -398,7 +398,7 @@
                   </div>
                  
                 </div>
-                <a href="">
+                <a href="./project/petaments.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -436,7 +436,7 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/pipeline.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -481,7 +481,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/Shopout.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
