add details page design

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
         <div class="col-xl-4 col-md-6 col-12 odd-even">
           <div class="portfolio-item-card">
             <div class="portfolio-image">
-              <a href="#" class="portfolio-image-link">
+              <a href="./project/eccocar.html" class="portfolio-image-link">
                 <img src="assets/projects/eccocar.png" alt="...">
               </a>
             </div>
@@ -363,7 +363,7 @@
         <div class="col-xl-4 col-md-6 col-12 odd-even">
           <div class="portfolio-item-card">
             <div class="portfolio-image">
-              <a href="#" class="portfolio-image-link">
+              <a href="./project/Sonetel.html" class="portfolio-image-link">
                 <img src="assets/projects/sonetel.png" alt="...">
               </a>
             </div>
@@ -376,7 +376,7 @@
         <div class="col-xl-4 col-md-6 col-12 odd-even">
           <div class="portfolio-item-card">
             <div class="portfolio-image">
-              <a href="#" class="portfolio-image-link">
+              <a href="./project/remedo.html" class="portfolio-image-link">
                 <img src="assets/projects/remedo.png" alt="...">
               </a>
             </div>
