--- a/project/petaments.html
+++ b/project/petaments.html
@@ -169,7 +169,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-6">
           <div class="">
-            <img src="../assets/projects/pipeline/Pipeline Dashboard.png" alt="">
+            <img src="../assets/projects/petaments/home-pc2.png" alt="" />
           </div>
         </div>
       </div>
