--- a/project/pipeline.html
+++ b/project/pipeline.html
@@ -46,6 +46,7 @@
   <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/pipeline.css">
+  <link rel="stylesheet" href="../assets/css/common-project.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -86,113 +87,131 @@
       </div>
     </div>
   </div>
-
-  <section class="pd-hero-container">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row pipeline-hero-row" style="height:100%">
-        <div class="col-md-6 col-sm-12 hero-col"
-          style="display:flex;flex-direction:column;align-items:start;justify-content:center;padding-left:8rem">
-          <h1 class="pd-hero-title">Pipeline</h1>
-          <p class="pd-hero-subtitle">Pipeline (Transforming Video Production Industry)</p>
-        </div>
-        <div class="col-md-6 col-sm-12 pipeline-col">
-          <img src="../assets/projects/pipeline/hero-pipeline" alt="">
-        </div>
+  <section class="hero-section pipeline-project-page">
+    <div class="container">
+      <div class="project-name">
+        <h2>Pipeline</h2>
+        <p>Pipeline (Transforming Video Production Industry)</p>
       </div>
     </div>
   </section>
+  
 
   <!-- our work  ---->
-  <section class="answerbook-container">
-
+  <section class="pipeline-container">
     <div class="container text-center">
-      <div class="row gx-5 pipeline-detail-row">
+      <div class="row answerbook-row gx-5">
+        <div class="col">
+          <div class="text-start">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="Duration">
+                  <h2 class="duration-title common-title"><i class="fa-sharp fa-regular fa-clock"></i>Duration</h2>
+                  <div class="duration-info d-flex mt-1">
+                    <p class="common-badge">January 2020 - Present</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="Client">
+                  <h2 class="Client-title common-title"><i class="fa-sharp fa-solid fa-user-tie"></i>Client</h2>
+                  <div class="Client-info d-flex mt-1">
+                    <p class="common-badge">Pipeline (Transforming Video Production Industry)</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa fa-map-marker" aria-hidden="true"></i>Location</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Europe</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa-sharp fa-solid fa-globe"></i>Platform</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Web</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="technologies mt-1">
+                  <h2 class="technology-title common-title"><i class="fa-solid fa-code"></i>Technologies</h2>
+                  <div class="technologie-info d-flex mt-1">
+                    <p class="common-badge">NextJS, NodeJS, ParseServer, PostgreSQL, React Native</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="col col-md-12 col-lg-6">
           <div class="">
-            <h1 class="text-start mb-3 pd-about-title">Overview</h1>
-            <p class="text-start pd-about-text pipeline-para">Pipeline wanted to build something more than just software. Pipeline
+            <h2 class="text-start mb-3 pd-about-title">Overview</h1>
+            <p class="text-start pd-about-text">Pipeline wanted to build something more than just software. Pipeline
               wanted to help people in video production industry by providing them a platform where they can produce
-              projects more easily, effectively, and with better collaboration than ever before.</p>
-          </div>
-        </div>
-        <div class="col pipeline-detail-col">
-          <div class="text-start pipeline-details">
-            <div class="Duration">
-              <h2 class="duration-title">Duration</h2>
-              <div class="duration-info d-flex mt-1">
-                <p style="margin-right:10px;">January 2020 - Present</p>
-              </div>
-            </div>
-            <div class="Client">
-              <h2 class="Client-title">Client</h2>
-              <div class="Client-info d-flex mt-1">
-                <p style="margin-right:10px;">Pipeline (Transforming Video Production Industry)</p>
-              </div>
-            </div>
-            <div class="d-flex">
-              <div class="Location me-3">
-                <h2 class="Location-title">Location</h2>
-                <div class="Location-info d-flex mt-1">
-                  <p style="margin-right:10px;">Europe</p>
-                </div>
-              </div>
-              <div class="platform">
-                <h2 class="platform-title">Platform</h2>
-                <div class="platform-info d-flex mt-1">
-                  <p style="margin-right:10px;">Web</p>
-                </div>
-              </div>
-            </div>
-            <div class="tecnologies mt-1">
-              <h2 class="technology-title">Technologies</h2>
-              <div class="technologie-info d-flex mt-1">
-                <p>React native</p>
-                <p>Spring boot</p>
-                <p>Angular</p>
-                <p>Jenkins</p>
-              </div>
-            </div>
+              projects more easily, effectively, and with better collaboration than ever before.
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section>
-    <div class="container px-4 mt-4">
-      <div class="row gx-5 feature-row">
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
-            <h2>The Situation</h2>
-            <p class="pipline-sub-heading">PIPELINE's ambitious aim to transform the Video Production Management</p>
-            <p class="pipeline-para">Pipeline has a years of experience and success in running video production companies. They exactly know in their business is that calendars are complex, day plans change at a moment’s notice, and every little item in the project has to be tracked. So they have decided to build a platform which can help people in managing their projects in a better way.</p>
-            <p class="pipeline-para">Pipeline engaged Code Symphony to co-develop this complex software solution. From the very first weeks of working together, Pipeline felt that the team at Code Symphony understood their challenges and knew how to deliver the platform.</p>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <div class="p-3">
-            <img src="../assets/projects/pipeline/Pipeline Dashboard.png" alt="">
+<div class="container">
+  <section id="slider">
+    <input type="radio" name="slider" id="s1" checked>
+    <input type="radio" name="slider" id="s2">
+    <input type="radio" name="slider" id="s3">
+    <input type="radio" name="slider" id="s4">
+    <input type="radio" name="slider" id="s5">
+
+    <label for="s1" id="slide1"><img src="../assets/projects/pipeline/web/1.png" alt=""></label>
+    <label for="s2" id="slide2"><img src="../assets/projects/pipeline/web/2.png" alt=""></label>
+    <label for="s3" id="slide3"><img src="../assets/projects/pipeline/web/3.png" alt=""></label>
+    <label for="s4" id="slide4"><img src="../assets/projects/pipeline/web/4.png" alt=""></label>
+    <label for="s5" id="slide5"><img src="../assets/projects/pipeline/web/5.png" alt=""></label>
+  </section>
+</div>
+
+<section class="project-detials eccocar-project-details">
+  <div class="container pb-3">
+    <div class="row">
+      <div class="col col-md-12 col-lg-12">
+        <div class="text-start">
+          <h2 class="features-container-title">The Situation - PIPELINE's ambitious aim to transform the Video Production Management</h2>
+          <div class="feature-content">
+            <div class="feature-details d-flex align-items-center">
+              <div class="feature-heading text-white bryllance-sub-heading">
+                Pipeline has a years of experience and success in running video production companies. They exactly know in their business is that calendars are complex, day plans change at a moment’s notice, and every little item in the project has to be tracked. So they have decided to build a platform which can help people in managing their projects in a better way.
+              </div>
+            </div>
+          </div>
+          <div class="feature-content">
+            <div class="feature-details d-flex align-items-center">
+              <div class="feature-heading text-white bryllance-sub-heading">
+                Led by their clear vision, we helped Pipeline to develop this complex solution which can be used by Video production companies as a all in one solution.
+              </div>
+            </div>
+          </div>
+          <div class="feature-content">
+            <div class="feature-details d-flex align-items-center">
+              <div class="feature-heading text-white bryllance-sub-heading">
+                Meeting all the functional demands was challenging, but our engineers seamlessly delivered the platform on time. The current version of Pipeline provides complete flexibility when it comes to managing a project. It supports wide range of features mentioned below.
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
-  <section>
-    <div class="container px-4 mt-4">
-      <div class="row gx-5 feature-row">
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <h2 class="text-start">The Situation</h2>
-          <p class="pipline-sub-heading text-start">All in one Video Production Management Solution</p>
-          <div class="">
-            <img src="../assets/projects/pipeline/Project Day.png" alt="">
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
-          <p class="pipeline-para mt-5">Led by their clear vision, we helped Pipeline to develop this complex solution which can be used by Video production companies as a all in one solution.</p>
-          <p class="pipeline-para">Meeting all the functional demands was challenging, but our engineers seamlessly delivered the platform on time. The current version of Pipeline provides complete flexibility when it comes to managing a project. It supports wide range of features mentioned below.</p>
-      </div>
-      </div>
-    </div>
-  </section>
-  <section>
+  </div>
+  </div>
+</section>
+  <!-- <section>
     <div class="container px-4 mt-5">
       <div class="row gx-5 feature-row">
         <div class="col-sm-12 col-md-12 col-lg-6">
@@ -203,7 +222,7 @@
       </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section>
     <div class="container mt-5">
       <h2 class="text-start mt-2">The Result</h2>
