--- a/work.html
+++ b/work.html
@@ -132,7 +132,7 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/eccocar.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -179,7 +179,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/Sonetel.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -219,7 +219,51 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/remedo.html">
+                  <h3 class="details">Read More</h3>
+                </a>
+              </div>
+          </div>
+          <div class="col-md-5 project-start">
+            <article class="card">
+              <div class="thumb remedo"></div>
+              <div class="infos">
+                <h2 class="title">Answerbook</h2>
+                <p class="txt">
+                  Code Symphony helped Answerbook (South Korean educational startup) in building this platform which can be used by students to learn something out of the syllabus. The app has two main functions:
+                </p>
+                <div class="plate-form">
+                  <h6>Platform :</h6>
+                  <div class="web">
+                    <img src="./assets/technology/web.png" class="www-icon inverted" />
+                  </div>
+                  <div class="mobile">
+                    <img src="./assets/technology/mobile.png" class="mobile inverted" />
+                  </div>
+                </div>
+                <div class="technlogy-name">
+                  <div class="icon">
+                    <img src="./assets/technology/nextJs.png" alt="next">
+                    <p>Nextjs</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/node.png" alt="node" />
+                    <p>Nodejs</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/parse.png" alt="angular" />
+                    <p>Parse server</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/PostgreSQL.png" alt="jenkins" />
+                    <p>PostgreSQL</p>
+                  </div>
+                  <div class="icon">
+                    <img src="./assets/technology/reactNative.png" alt="native" />
+                    <p>React Native</p>
+                  </div>
+                </div>
+                <a href="./project/answerbook.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -248,7 +292,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/bluebird.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -277,7 +321,7 @@
                     <p>Redux</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/bryllance.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -321,7 +365,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/compose.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -347,7 +391,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/noobstrom.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -398,7 +442,7 @@
                   </div>
                  
                 </div>
-                <a href="">
+                <a href="./project/petaments.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -436,7 +480,7 @@
                     <p>Jenkins</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/pipeline.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
@@ -481,7 +525,7 @@
                     <p>React Native</p>
                   </div>
                 </div>
-                <a href="">
+                <a href="./project/Shopout.html">
                   <h3 class="details">Read More</h3>
                 </a>
               </div>
