--- a/project/Sonetel.html
+++ b/project/Sonetel.html
@@ -46,6 +46,7 @@
   <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/sonetel.css">
+  <link rel="stylesheet" href="../assets/css/common-project.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -87,50 +88,51 @@
     </div>
   </div>
 
-  <section class="pd-hero-container">
-    <div class="container-fluid" style="height:100%;">
-      <div class="row" style="height:100%">
-        <div class="col-sm-12 col-md-12 col-lg-6 hero-col"
-          style="display:flex;flex-direction:column;align-items:start;justify-content:center;padding-left:8rem">
-          <h1 class="pd-hero-title">Sonetel</h1>
-          <p class="pd-hero-subtitle">Sonetel (An customer communication )</p>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 sonetel-col">
-          <img src="../assets/projects/sonetel/Sonetel 1.png" alt="">
-        </div>
+  <section class="hero-section sonetel-project-page">
+    <div class="container">
+      <div class="project-name">
+        <h2>Sonetel</h2>
+        <p>Sonetel (An customer communication )</p>
       </div>
     </div>
   </section>
-
-  <!-- our work  ---->
   <section class="sonetel-container">
     <div class="container text-center">
-      <div class="row sonetel-detail-row gx-5">
-        <div class="col col-md-12 col-lg-6">
-          <div class="">
-            <h1 class="pd-about-title text-start mb-3">About</h1>
-            <p class="sonetel-para">We are a Global Solution. We believe in everyone’s right to make the most of their lives, regardless of nationality, faith, Color of skin or gender. Over 2 million businesses have signed up for our services across the years. 180 000 of these have become paying customers. We have paying customers in 170 countries. We want to contribute to this trend by helping hard working entrepreneurs worldwide sell more. We do this by providing them with free and low-cost services, that help them become more available to their customers. We also use artificial intelligence to make the entrepreneur's life a bit easier, by automating repetitive tasks in their customer communication.
-            </p>
-          </div>
-        </div>
+      <div class="row answerbook-row gx-5">
         <div class="col">
           <div class="text-start">
-            <div class="platform">
-              <h2 class="platform-title">Platform</h2>
-              <div class="platform-info d-flex mt-1">
-                <p style="margin-right:10px;">Web</p>
-                <p>Mobile</p>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="platform">
+                  <h2 class="platform-title common-title">
+                    <i class="fa-sharp fa-solid fa-globe"></i>Platform</h2>
+                  <div class="platform-info d-flex mt-1">
+                    <p class="common-badge">Web / Mobile</p>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="col-md-12">
+                <div class="technologies mt-1">
+                  <h2 class="technology-title common-title"><i class="fa-solid fa-code"></i>Technologies</h2>
+                  <div class="technologie-info d-flex mt-1">
+                    <p class="common-badge">Next js, Node js, Parse server, PostgreSQL, React Native</p>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="technologies mt-1">
-              <h2 class="technology-title">Technologies</h2>
-              <div class="technologie-info d-flex mt-1">
-                <p>Next js</p>
-                <p>Node js</p>
-                <p>Parse server</p>
-                <p>PostgreSQL</p>
-                <p>React Native</p>
-              </div>
+          </div>
+        </div>
+        <div class="col col-md-12 col-lg-6">
+          <div class="">
+            <h2 class="text-start mb-3 pd-about-title">About</h2>
+            <p class="text-start pd-about-text eccocar-about eccocar-sm-font">
+              We are a Global Solution. We believe in everyone’s right to make the most of their lives, regardless of nationality, faith, Color of skin or gender. Over 2 million businesses have signed up for our services across the years. 180 000 of these have become paying customers. We have paying customers in 170 countries. We want to contribute to this trend by helping hard working entrepreneurs worldwide sell more. We do this by providing them with free and low-cost services, that help them become more available to their customers. We also use artificial intelligence to make the entrepreneur's life a bit easier, by automating repetitive tasks in their customer communication.</p>
+              <div class="inner-right-content">
+              <h6>Benefits</h6>
+            <p>Increased sales</p>
+            <p>An instant professional front end for your business</p>
+            <p>Better conversations</p>
             </div>
           </div>
         </div>
@@ -138,83 +140,73 @@
     </div>
   </section>
 
-  <section class="container">
-    <h4 class="text-start mb-3">Benefits</h4>
-    <p class="sonetel-para">Increased sales</p>
-    <p class="sonetel-para">An instant professional front end for your business</p>
-    <p class="sonetel-para">Better conversations</p>
-  </section>
-
-  <section style="background-color:#3F3B3B;">
-   <div class="container" style="padding: 30px 0;">
-    <h2 class="features-container-title shopout-feature text-start" style="color: #FEB062;">Features</h2>
+  <section class="project-detials eccocar-project-details">
+    <div class="container pb-3">
+      <div class="row">
+        <div class="col col-md-10 col-lg-10">
+          <div class="text-start">
+            <h2 class="features-container-title">Features</h2>
             <div class="feature-content">
-              <div class="feature-details mx-3 d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/sonetel/icons/Global call.png" class="sonetel-icon">
-                </div>
-                <div class="sonetel-sub-heading text-white">
-                  Global call forwarding- Incoming calls to your phone numbers can be forwarded to anywhere worldwide at the cost of a local call. Answer with your regular mobile or any other type of phone. 
+              <div class="feature-details d-flex align-items-center">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Global call forwarding- Incoming calls to your phone numbers can be forwarded to anywhere worldwide at the cost of a local call. Answer with your regular mobile or any other type of phone.
                 </div>
               </div>
             </div>
             <div class="feature-content">
-              <div class="feature-details mx-3 d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/sonetel/icons/international numbers.png" class="sonetel-icon">
-                </div>
-                <div class="sonetel-sub-heading text-white">
-                  Call from your international numbers- You can make calls from your phone numbers, using your regular mobile, from anywhere in the world. This is however not possible with free numbers. 
+              <div class="feature-details d-flex align-items-center">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  Call from your international numbers- You can make calls from your phone numbers, using your regular mobile, from anywhere in the world. This is however not possible with free numbers.
                 </div>
               </div>
             </div>
             <div class="feature-content">
-              <div class="feature-details mx-3 d-flex align-items-center mt-3">
-                <div class="feature-icon" style="margin-right:20px;">
-                  <img src="../assets/projects/sonetel/icons/SMS.png" class="sonetel-icon">
-                </div>
-                <div class="sonetel-sub-heading text-white">
-                  SMS-to-email- Receive incoming SMS messages on your Sonetel number to your email inbox. 
+              <div class="feature-details d-flex align-items-center">
+                <div class="feature-heading text-white bryllance-sub-heading">
+                  SMS-to-email- Receive incoming SMS messages on your Sonetel number to your email inbox.
                 </div>
               </div>
             </div>
-   </div>
-  </section>
-
-  <div id="sonetelcarouse" class="carousel slide container mt-3 mb-3 " data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#sonetelcarouse" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#sonetelcarouse" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#sonetelcarouse" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#sonetelcarouse" data-bs-slide-to="3" aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#sonetelcarouse" data-bs-slide-to="4" aria-label="Slide 5"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/projects/sonetel/Sonetel 1.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/sonetel/Sonetel 2.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/sonetel/Sonetel 3.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/sonetel/Sonetel 4.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/sonetel/Sonetel 5.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+        
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#sonetelcarouse" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#sonetelcarouse" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+    </div>
+  </section>
+
+  <div class="container">
+  <section id="slider" class="slider-sonetel">
+    <input type="radio" name="slider" id="s1" checked>
+    <input type="radio" name="slider" id="s2">
+    <input type="radio" name="slider" id="s3">
+    <input type="radio" name="slider" id="s4">
+    <input type="radio" name="slider" id="s5">
+
+    <!-- <label for="s1" id="slide1"><img src="../assets/projects/sonetel/admin/Sonetel1.png" alt=""></label> -->
+    <label for="s2" id="slide2"><img src="../assets/projects/sonetel/admin/Sonetel 2.png" alt=""></label>
+    <label for="s3" id="slide3"><img src="../assets//projects/sonetel/admin/Sonetel 3.png" alt=""></label>
+    <label for="s4" id="slide4"><img src="../assets//projects/sonetel/admin/Sonetel 4.png" alt=""></label>
+    <label for="s5" id="slide5"><img src="../assets//projects/sonetel/admin/Sonetel 5.png" alt=""></label>/
+
+    <label for="s1" id="slide1">
+      <img src="../assets/projects/sonetel/Sonetel 1.png" class="d-block w-100" alt="...">
+    </label>
+    <label for="s2" id="slide2">
+      <img src="../assets/projects/sonetel/Sonetel 2.png" class="d-block w-100" alt="...">
+    </label>
+    <label for="s3" id="slide3">
+      <img src="../assets/projects/sonetel/Sonetel 3.png" class="d-block w-100" alt="...">
+    </label>
+    <label for="s4" id="slide4">
+      <img src="../assets/projects/sonetel/Sonetel 4.png" class="d-block w-100" alt="...">
+    </label>
+    <label for="s5" id="slide5">
+      <img src="../assets/projects/sonetel/Sonetel 5.png" class="d-block w-100" alt="...">
+    </label>
+  </section>
   </div>
+
 
   <!-- footer section  ---->
   <div class="footer-1 pt-5">
