--- a/project/answerbook.html
+++ b/project/answerbook.html
@@ -95,6 +95,7 @@
     </div>
   </div>
 </section>
+
   <!-- our work  ---->
   <section class="answerbook-container">
     <div class="container text-center">
@@ -153,42 +154,35 @@
       </div>
     </div>
   </section>
-
+  <div class="container">
+  <section id="slider" class="slider-answerbook">
+    <input type="radio" name="slider" id="s1" checked>
+    <input type="radio" name="slider" id="s2">
+    <input type="radio" name="slider" id="s3">
+    <input type="radio" name="slider" id="s4">
+    <input type="radio" name="slider" id="s5">
+    <label for="s1" id="slide1">
+      <img src="../assets/projects/answerbook/web/Home Page 1.jpg">
+    </label>
+    <label for="s2" id="slide2">
+      <img src="../assets/projects/answerbook/web/Home Page 2.jpg">
+    </label>
+    <label for="s3" id="slide3">
+      <img src="../assets/projects/answerbook/web/Home Page 3.jpg">
+    </label>
+    <label for="s4" id="slide4">
+      <img src="../assets/projects/answerbook/web/Home Page 4.jpg">
+    </label>
+    <!-- <label for="s5" id="slide5">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s reports.png">
+    </label> -->
+  </section>
+  </div>
   <section class="project-detials">
-    <div class="px-4 key-feature-container ">
+    <div class="px-4 key-feature-container container">
       <div class="row gx-5 feature-row">
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <div class="p-3">
-            <div id="carouselExampleControls-6" class="carousel slide" data-bs-ride="carousel"
-              style="display: flex;justify-content: center;">
-              <div class="carousel-inner" style="height:500px;width:250px ">
-                <div class="carousel-item active" style="height:500px;width:250px">
-                  <img src="../assets/answerbook.1.jpg"
-                    style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/answerbook.2.jpg"
-                    style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250x">
-                  <img src="../assets/answerbook.3.jpg"
-                    style="height:500px;width:250px">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-6"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-6"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
+      
+        <div class="col-sm-12 col-md-12 col-lg-10 text-start">
           <div class="p-3 text-start">
             <h2 class="features-container-title">Answerbook Web App</h2>
             <div class="feature-content">
@@ -238,58 +232,31 @@
       </div>
     </div>
   </section>
-
-  <div id="carouselExampleIndicators-7" class="carousel slide container mt-5 mb-5" data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="0" class="active"
-        aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="1"
-        aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="3"
-        aria-label="Slide 4"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="4"
-        aria-label="Slide 5"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="5"
-        aria-label="Slide 6"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators-7" data-bs-slide-to="6"
-        aria-label="Slide 7"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/projects/answerbook/Add-Questions.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/Detailed-Student-Info.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/Register-Textbook.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/SignIn.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/SignUp.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/Student Info.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/answerbook/Textbook Home.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators-7"
-      data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators-7"
-      data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+  <div class="container">
+  <section id="slider-desktop" class="slider-answerbook-desktop">
+    <input type="radio" name="slider-desktop" id="s1-desktop" checked>
+    <input type="radio" name="slider-desktop" id="s2-desktop">
+    <input type="radio" name="slider-desktop" id="s3-desktop">
+    <input type="radio" name="slider-desktop" id="s4-desktop">
+    <input type="radio" name="slider-desktop" id="s5-desktop">
+    <label for="s1-desktop" id="slide1-desktop">
+      <img src="../assets/projects/answerbook/Add-Questions.png">
+    </label>
+    <label for="s2-desktop" id="slide2-desktop">
+      <img src="../assets/projects/answerbook/Student Info.png">
+    </label>
+    <label for="s3-desktop" id="slide3-desktop">
+      <img src="../assets/projects/answerbook/Register-Textbook.png">
+    </label>
+    <label for="s4-desktop" id="slide4-desktop">
+      <img src="../assets/projects/answerbook/SignIn.png">
+    </label>
+    <label for="s5-desktop" id="slide5-desktop">
+      <img src="../assets/projects/answerbook/Textbook Home.png">
+    </label>
+  </section>
   </div>
+  
 
   <section class="web-dev-part">
     <div class="container text-start pt-4 pb-4">
