--- a/project/remedo.html
+++ b/project/remedo.html
@@ -97,6 +97,8 @@
     </div>
   </section>
 
+  
+
 
   <section class="remedo-container">
     <div class="container text-center">
@@ -159,55 +161,35 @@
       </div>
     </div>
   </section>
- 
 
+ <div class="container">
+  <section id="slider" class="slider-remedo">
+    <input type="radio" name="slider" id="s1" checked>
+    <input type="radio" name="slider" id="s2">
+    <input type="radio" name="slider" id="s3">
+    <input type="radio" name="slider" id="s4">
+    <input type="radio" name="slider" id="s5">
+    <label for="s1" id="slide1">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s list.png">
+    </label>
+    <label for="s2" id="slide2">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s prescription.png">
+    </label>
+    <label for="s3" id="slide3">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s profile.png">
+    </label>
+    <label for="s4" id="slide4">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s record.png">
+    </label>
+    <label for="s5" id="slide5">
+      <img src="../assets/projects/remedo/Pateint/Pateint_s reports.png">
+    </label>
+  </section>
+  </div>
   <section class="project-detials">
-    <div class="px-4 key-feature-container ">
+    <div class="px-4 key-feature-container container">
       <div class="row gx-5 feature-row align-items-center">
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <div class="p-3">
-            <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel"
-              style="display: flex;justify-content: center;">
-              <div class="carousel-inner" style="height:500px;width:250px ">
-                <div class="carousel-item active" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Add Pateint.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Add Pateint1.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s list.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s prescription.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s profile.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s record.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s reports.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Pateint/Pateint_s_reports.png" style="height:500px;width:250px">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-1"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
+        <div class="col-sm-12 col-md-12 col-lg-10 text-start">
           <div class="p-3 text-start">
             <h2 class="features-container-title">Remedo Doctor's App</h2>
             <div class="feature-content">
@@ -257,54 +239,34 @@
       </div>
     </div>
   </section>
-
+  <div class="container">
+  <section id="slider2" class="slider-remedo">
+    <input type="radio" name="slider1" id="s11" checked>
+    <input type="radio" name="slider1" id="s21">
+    <input type="radio" name="slider1" id="s31">
+    <input type="radio" name="slider1" id="s41">
+    <input type="radio" name="slider1" id="s51">
+    <label for="s11" id="slide11">
+      <img src="../assets/projects/remedo/Care Plans/care_plan-removebg-preview.png">
+    </label>
+    <label for="s21" id="slide21">
+      <img src="../assets/projects/remedo/Care Plans/care_plan_-_action-removebg-preview.png">
+    </label>
+    <label for="s31" id="slide31">
+      <img src="../assets/projects/remedo/Care Plans/care_plan_-_diet-removebg-preview.png">
+    </label>
+    <label for="s41" id="slide41">
+      <img src="../assets/projects/remedo/Care Plans/care_plan_-_lessons-removebg-preview.png">
+    </label>
+    <label for="s51" id="slide51">
+      <img src="../assets/projects/remedo/Care Plans/explore_care_plans-removebg-preview.png">
+    </label>
+  </section>
+  </div>
   <section class="project-detials">
-    <div class="px-4 key-feature-container ">
+    <div class="px-4 key-feature-container container">
       <div class="row gx-5 feature-row align-items-center">
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <div class="p-3">
-            <div id="carouselExampleControls-2" class="carousel slide" data-bs-ride="carousel"
-              style="display: flex;justify-content: center;">
-              <div class="carousel-inner" style="height:500px;width:250px ">
-                <div class="carousel-item active" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/care_plan-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/care_plan_-_action-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250x">
-                  <img src="../assets/projects/remedo/Care Plans/care_plan_-_diet-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/care_plan_-_lessons-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/care_plans-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/explore_care_plans-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/Subscribed_care_plans-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:250px">
-                  <img src="../assets/projects/remedo/Care Plans/subscribed_care_plans1-removebg-preview.png" style="height:500px;width:250px">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-2"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-2"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
+        <div class="col-sm-12 col-md-12 col-lg-10 text-start">
           <div class="p-3 text-start">
             <h2 class="features-container-title">Provide Care Plans </h2>
             <div class="feature-content">
@@ -327,6 +289,9 @@
     <p class="text-start remedo-para">The challenge with the web app was making sure we were developing an MVP (minimal viable prototype) of the algorithm used to detect symptom changes.  At one point, we discussed machine learning to cover more subtle scenarios, but instead we agreed to launch with a simpler formula that would cover the most common changes.  This ended up being a worthy compromise that allowed us to get to market faster.</p>
   </div>
 
+  
+  
+
   <!-- footer section  ---->
   <div class="footer-1 pt-5">
     <div class="rows d-flex justify-content-evenly pb-4">
@@ -336,25 +301,7 @@
           <p style="font-size: 14px; color: #c7c7c7;">Learning as a lifestyle</p>
         </div>
       </div>
-      <!-- <div class="columns-2">
-        <div class="f-heding text-white" style="margin-bottom: 36px;">
-          <h4 class="footer-font-style" style="font-size: 20px;">Company</h4>
-        </div>
-        <div class="footer-info">
-          <a href="">
-            <p class="f-effect">Delivering</p>
-          </a>
-          <a href="">
-            <p class="f-effect">excellence</p>
-          </a>
-          <a href="">
-            <p class="f-effect">righteously</p>
-          </a>
-          <a href="">
-            <p class="f-effect">Contact Us</p>
-          </a>
-        </div>
-      </div> -->
+   
       <div class="columns-3">
         <div class="f-heding text-white" style="margin-bottom: 36px;">
           <h4 class="footer-font-style" style="font-size: 20px;">Partnered With</h4>
