resposnive design changes

--- a/project/answerbook.html
+++ b/project/answerbook.html
@@ -48,6 +48,7 @@
   <link rel="stylesheet" href="../assets/css/answerbook-new.css">
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/common-project.css">
+  <link rel="stylesheet" href="../assets/css/project-responsive.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -100,7 +101,7 @@
   <section class="answerbook-container">
     <div class="container text-center">
       <div class="row answerbook-row gx-5">
-        <div class="col">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="text-start">
             <div class="row">
               <div class="col-md-6">
@@ -139,7 +140,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-md-12 col-lg-6">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="">
             <p class="text-start pd-about-text">Code Symphony helped Answerbook (South Korean educational startup) in
               building this platform which can be used by students to learn something out of the syllabus. The app has
@@ -232,7 +233,8 @@
       </div>
     </div>
   </section>
-  <div class="container">
+  <section class="">
+  <div class="container slider-section">
   <section id="slider-desktop" class="slider-answerbook-desktop">
     <input type="radio" name="slider-desktop" id="s1-desktop" checked>
     <input type="radio" name="slider-desktop" id="s2-desktop">
@@ -256,6 +258,7 @@
     </label>
   </section>
   </div>
+  </section>
   
 
   <section class="web-dev-part">
