--- a/project/eccocar.html
+++ b/project/eccocar.html
@@ -46,7 +46,7 @@
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/eccocar.css">
   <link rel="stylesheet" href="../assets/css/common-project.css">
-  
+  <link rel="stylesheet" href="../assets/css/project-responsive.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -100,7 +100,7 @@
   <section class="eccocar-container">
     <div class="container text-center">
       <div class="row answerbook-row gx-5">
-        <div class="col">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="text-start">
             <div class="row">
               <div class="col-md-6">
@@ -148,7 +148,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-md-12 col-lg-6">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="">
             <h2 class="text-start mb-3 pd-about-title">Overview</h2>
             <p class="text-start pd-about-text eccocar-about eccocar-sm-font">
@@ -167,14 +167,14 @@
   <section class="project-detials eccocar-project-details">
     <div class="container pb-3">
       <div class="row">
-        <div class="col col-md-12 col-lg-6">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="text-start">
             <h2 class="features-container-title">Reservation Management System (RMS)</h2>
             <p class="text-start text-white eccocar-sm-font eccocar-about pt-1">Eccocar wanted a platform where their partners can launch their own shared mobility services within short period of time. Eccocar wanted a Digital solution that can be integrated between Eccocar and their partner's RMS, where partners can choose the modules they want to operate with. Below are the features that users would be able to use within the RMS to improve their car rental strategy and operational efficiency.</p>
           
           </div>
         </div>
-        <div class="col col-md-12 offset-md-1 col-lg-5">
+        <div class="col-12 col-md-12 col-lg-6 right-side-part">
           <div class="text-start">
             <div class="feature-content">
               <div class="feature-details d-flex align-items-center">
