--- a/project/bryllance.html
+++ b/project/bryllance.html
@@ -138,42 +138,35 @@
     </div>
   </section>
 
+  <div class="container">
+    <section id="slider" class="slider-remedo">
+      <input type="radio" name="slider" id="s1" checked>
+      <input type="radio" name="slider" id="s2">
+      <input type="radio" name="slider" id="s3">
+      <input type="radio" name="slider" id="s4">
+      <input type="radio" name="slider" id="s5">
+      <label for="s1" id="slide1">
+        <img src="../assets/projects/bryllance/Bryllance_5.png">
+      </label>
+      <label for="s2" id="slide2">
+        <img src="../assets/projects/bryllance/Bryllance_6.png">
+      </label>
+      <label for="s3" id="slide3">
+        <img src="../assets/projects/bryllance/Bryllance_7.png">
+      </label>
+      <label for="s4" id="slide4">
+        <img src="../assets/projects/bryllance/Bryllance_8.png">
+      </label>
+      <label for="s5" id="slide5">
+        <img src="../assets/projects/bryllance/Bryllance_6.png">
+      </label>
+    </section>
+    </div>
 
   <section class="project-detials">
-    <div class="px-4 key-feature-container ">
+    <div class="px-4 key-feature-container container">
       <div class="row gx-5 feature-row">
-        <div class="col-sm-12 col-md-12 col-lg-6">
-          <div class="p-3">
-            <div id="carouselExampleControls-1" class="carousel slide" data-bs-ride="carousel"
-              style="display: flex;justify-content: center;">
-              <div class="carousel-inner" style="height:500px;width:280px ">
-                <div class="carousel-item active" style="height:500px;width:280px">
-                  <img src="../assets/projects/bryllance/Bryllance_5.png" style="height:500px;width:280px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:300px">
-                  <img src="../assets/projects/bryllance/Bryllance_6.png" style="height:500px;width:280px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:300px">
-                  <img src="../assets/projects/bryllance/Bryllance_7.png" style="height:500px;width:280px">
-                </div>
-                <div class="carousel-item" style="height:500px;width:300px">
-                  <img src="../assets/projects/bryllance/Bryllance_8.png" style="height:500px;width:280px">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-1"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-1"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-12 col-lg-6 text-start">
+        <div class="col-sm-12 col-md-12 col-lg-12 text-start">
           <div class="p-3 text-start">
             <h2 class="features-container-title">Specially made for both the Freelancer and the Client.</h2>
             <div class="feature-content">
@@ -210,32 +203,6 @@
     </div>
   </section>
 
-  <div id="bryllancecarouse" class="carousel bryllance-slider slide container mt-5 mb-5" data-bs-ride="true">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#bryllancecarouse" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#bryllancecarouse" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#bryllancecarouse" data-bs-slide-to="2" aria-label="Slide 3"></button>
-    </div>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/projects/bryllance/Bryllance 1.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/bryllance/Bryllance 2.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/projects/bryllance/Bryllance 4.png" class="d-block w-100" alt="...">
-      </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#bryllancecarouse" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#bryllancecarouse" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div>
   <!-- footer section  ---->
   <div class="footer-1 pt-5">
     <div class="rows d-flex justify-content-evenly pb-4">
@@ -245,25 +212,6 @@
           <p style="font-size: 14px; color: #c7c7c7;">Learning as a lifestyle</p>
         </div>
       </div>
-      <!-- <div class="columns-2">
-        <div class="f-heding text-white" style="margin-bottom: 36px;">
-          <h4 class="footer-font-style" style="font-size: 20px;">Company</h4>
-        </div>
-        <div class="footer-info">
-          <a href="">
-            <p class="f-effect">Delivering</p>
-          </a>
-          <a href="">
-            <p class="f-effect">excellence</p>
-          </a>
-          <a href="">
-            <p class="f-effect">righteously</p>
-          </a>
-          <a href="">
-            <p class="f-effect">Contact Us</p>
-          </a>
-        </div>
-      </div> -->
       <div class="columns-3">
         <div class="f-heding text-white" style="margin-bottom: 36px;">
           <h4 class="footer-font-style" style="font-size: 20px;">Partnered With</h4>
