--- a/project/remedo.html
+++ b/project/remedo.html
@@ -47,6 +47,7 @@
   <link rel="stylesheet" href="../assets/css/style.css">
   <link rel="stylesheet" href="../assets/css/remedo.css">
   <link rel="stylesheet" href="../assets/css/common-project.css">
+  <link rel="stylesheet" href="../assets/css/project-responsive.css">
   <script src="https://kit.fontawesome.com/4e41ac621c.js" crossorigin="anonymous"></script>
   <script
     type="text/javascript">window.__WEBFLOW_CURRENCY_SETTINGS = { "currencyCode": "USD", "$init": true, "symbol": "$", "decimal": ".", "fractionDigits": 2, "group": ",", "template": "{{wf {\"path\":\"symbol\",\"type\":\"PlainText\"} }} {{wf {\"path\":\"amount\",\"type\":\"CommercePrice\"} }} {{wf {\"path\":\"currencyCode\",\"type\":\"PlainText\"} }}", "hideDecimalForWholeNumbers": false };</script>
@@ -103,7 +104,7 @@
   <section class="remedo-container">
     <div class="container text-center">
       <div class="row answerbook-row gx-5">
-        <div class="col">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="text-start">
             <div class="row">
               <div class="col-md-6">
@@ -151,7 +152,7 @@
             </div>
           </div>
         </div>
-        <div class="col col-md-12 col-lg-6">
+        <div class="col-12 col-md-12 col-lg-6">
           <div class="">
             <h2 class="text-start mb-3 pd-about-title">Idea</h2>
             <p class="text-start pd-about-text eccocar-about eccocar-sm-font">
